fixes The intercom chat icon is covering the "Copy Embed Code" on the pricing tier config form. Needs bottom margin.

--- a/public/scss/_layout-content.scss
+++ b/public/scss/_layout-content.scss
@@ -47,6 +47,10 @@
           padding-top: $gutter * 1.5;
         }
 
+        &:last-child{
+          margin-bottom: $gutter * 5;
+        }
+
         .caret{
           @include defaultTransition;
           display: block;
